# openapi-manifest.json
@@ -966,6 +966,61 @@
                     }
                 }
             }
+        },
+        "/listCommits": {
+            "get": {
+                "summary": "List Commits",
+                "description": "Returns the list of commits for a specified repository.",
+                "operationId": "list_commits",
+                "parameters": [
+                    {
+                        "name": "repositoryName",
+                        "in": "query",
+                        "required": true,
+                        "description": "Name of the repository whose collaborators you want to list.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "loggedUser",
+                        "in": "query",
+                        "required": true,
+                        "description": "Username of the user making the request.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "security": [
+                    {
+                        "OAuth2": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of commits retrieved successfully.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "username": {
+                                                "type": "string"
+                                            },
+                                            "permission": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
